2004-03-18  Nick Drochak <ndrochak@ieee.org>

	* Math.cs: Use IsNaN() method not "x == NaN".

2004-03-16  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* EntryPointNotFoundException.cs
	* DuplicateWaitObjectException.cs
	* DllNotFoundException.cs
	* DivideByZeroException.cs
	* ContextMarshalException.cs
	* CannotUnloadAppDomainException.cs
	* BadImageFormatException.cs
	* ArrayTypeMismatchException.cs
	* ArithmeticException.cs
	* ArgumentOutOfRangeException.cs
	* ArgumentNullException.cs
	* ArgumentException.cs
	* ApplicationException.cs
	* AppDomainUnloadedException.cs: Added missing HResult overrides

	* BadImageFormatException.cs: Improved/ Fixed implementation

2004-03-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Random.cs: Corrected random value when Next is called with a 
	negative value. Testing indictae that our results aren't exactly the 
	same as MS, we have a +/- 1 (probably rounding errors due to 
	different implementation).

2004-03-15  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Environment.cs: updated corlib version.

2004-03-15  Lluis Sanchez Gual <lluis@ximian.com>

	* Boolean.cs, Byte.cs, Char.cs, Double.cs, Int16.cs, Int32.cs, Int64.cs,
	  SByte.cs, Single.cs, UInt16.cs, UInt32.cs, UInt64.cs: Renamed internal
	  field "value" to "m_value", so it is interoperable with MS.NET when 
	  serializing and deserializing data. Based on the patch from Daniel
	  Keep.

2004-03-14  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* TypeInitializationException.cs
	* SystemException.cs
	* StackOverflowException.cs
	* RankException.cs
	* OverflowExceptionException.cs
	* OutOfMemoryException.cs
	* NullReferenceException.cs
	* NotSupportedException.cs
	* NotFiniteNumberException.cs
	* InvalidOperationException.cs
	* InvalidCastException.cs
	* IndexOutOfRangeException.cs
	* FormatException.cs
	* ExecutionEngineException.cs: improved parameter names

2004-03-13  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Enum.cs